[CI] Update prepare.sh